<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">FitByte</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="set1">Set 1 : </string>
    <string name="set2">Set 2 : </string>
    <string name="set3">Set 3 : </string>
    <string name="current">Current </string>
    <string name="saveEntry">Save Entry</string>

    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="cardio_exercise_array">
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bicycling (light)</item>
        <item>Bicycling (moderate)</item>
        <item>Bicycling (vigorous)</item>
        <item>Boxing</item>
        <item>Bowling</item>
        <item>Calisthenics (light)</item>
        <item>Calisthenics (moderate)</item>
        <item>Calisthenics (vigorous)</item>
        <item>Fencing</item>
        <item>Football</item>
        <item>Golf</item>
        <item>Racquetball</item>
        <item>Rock Climbing (low-moderate)</item>
        <item>Rock Climbing (difficult)</item>
        <item>Running (10 min/mile)</item>
        <item>Running (7.5 min/mile)</item>
        <item>Running (6 min/mile)</item>
        <item>Running (5 min/mile)</item>
        <item>Running (4.3 min/mile)</item>
        <item>Skateboarding</item>
        <item>Soccer (general)</item>
        <item>Soccer (competitive)</item>
        <item>Softball</item>
        <item>Swimming (light-moderate)</item>
        <item>Swimming (competition)</item>
        <item>Tennis</item>
        <item>Volleyball</item>
        <item>Walking</item>
    </string-array>

</resources>
